# recognition-equation

./: LICENSE  README.md  pyproject.toml  setup.py
src/rec_eq/: __init__.py  cli.py  journal.py  model.py
tests/: test_cli.py  test_journal.py  test_model.py
