[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recognition-equation"
version = "0.1.0"
description = "R = C − A. Interactive tools for applying the recognition equation to any domain."
readme = "README.md"
license = {text = "CC-BY-4.0"}
requires-python = ">=3.9"
authors = [
    {name = "Michael Schaeffer"}
]
keywords = ["recognition", "equation", "insight", "contact", "agenda"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
rec-eq = "rec_eq.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
